[tool.poetry]
name = "broker"
version = "0.1.0"
description = ""
authors = ["Ali Benkassou <a.benkassou1@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
bottle = "^0.12.18"

[tool.poetry.dev-dependencies]
pylint = "^2.4.4"
pytest = "^5.4.1"
pytest-cov = "^2.8.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
