[tool.poetry]
name = "broker"
version = "0.1.0"
description = ""
authors = ["Ali Benkassou <a.benkassou1@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1.2"
flask-cors = "^3.0.8"
sqlalchemy = "^1.3.17"
jupyter = {version = "^1.0.0", optional = true}

[tool.poetry.dev-dependencies]
pylint = "^2.4.4"
pytest = "^5.4.1"
pytest-cov = "^2.8.1"
flake8 = "^3.7.9"

[tool.poetry.extras]
jupyter = ["jupyter"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
