[tool.poetry]
name = "runner"
version = "0.1.0"
description = ""
authors = ["Ali Benkassou <a.benkassou1@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.23.0"

[tool.poetry.dev-dependencies]
pylint = "^2.4.4"
pytest = "^5.4.1"
flake8 = "^3.7.9"
pytest-cov = "^2.8.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
